[package]
name = "jamendo"
description = "Jamendo API client"
version = "0.1.0"
authors = ["Jakob Gillich <jakob@gillich.me>"]
license = "MIT"
documentation = "https://jgillich.github.io/jamendo-rs/jamendo/index.html"
repository = "https://github.com/jgillich/jamendo-rs"

[dependencies]
serde = "0.7"
serde_json = "0.7"
serde_macros = "0.7"
hyper = { version = "0.9", features = [ "serde-serialization" ] }
url = "1.0"
